traversal.snake.Snake.scala.error
Compilation error:
Snake:0: error: class Snake needs to be abstract, since there is a deferred declaration of method run which is not implemented in a subclass
class Snake extends SimpleBuggle {
      ^